### Change Log
**This does not detail anything from any updates prior to this file.
***Only reason this file wasnt made sooner is because im lazu...

## [V1.0.6]
### Changed
- Updated a few mods (Notable AE2, and BotanyPots)
- Values for the Sieve's (Turns out im bad at math, who knew!)
## Added
- Leaky
- Staaaaaaaaaaaack (Stxck)
- Item Filters (I honestly dont know how I missed this tell now... woops)
## Removed

## [V1.0.5]
### Noteice!!!
This is a LARGE update, Users may want to restart due to the major overhaul of the starting progression
### Added
- Ex Deorum/Hammers
- XyCraft
- TreeBarks
- BiomeBeans (For Biome Modification)
- (On Trial) BOP - for builders mostly
### Changed
- Updated Forge/nearly every mod
- Rollback ProbeJS (Probe 7 not done)
- New Default Starter Island, Less stuff, levers new
- Updated IntegratedDynamics Config to disable Rewards
- added rubber trees to the BotanyPots
- Finally Fixed Freaking Singleplayer Default World Type! (Stupid Forge)!!
### Removed
- SkyResources/Cobblefordays/simplefluid gens (In favor of seives, and custom multiblocks)
- Forced GTCEU Texture Pack - will just be included with other options


## [V1.0.4]
### Added
### Changed
- JukeBox Recipe Tweaked
- Fixes an issue with compressors
- Updates GTCEU Textures
- minor recipe tweaks
- custom items preping for the gregging
### Removed
- Removed A Create Addon due to lack of active support.

## [V1.0.3] - 2024-04-16
### Added
- Some Create Addons
- Builders Wands
- Some missing KubeJS Compacts
- A CC Addon that allows it to act a bit more like OpenComputers
- Custom KubeJS Items Starting to be added
- Kelp to BioMarket
### Changed
- Some Mod updates
- Fixed a typo with Bronze and Brass in recipes
- Updating client quests to match server
- Gregging UnGregged Woods
- Disabled IntegratedDynamics Sqeezers (No Way To Override the recipes)
- Fixed Stray Glass issue
- Removed Hyperbox Recipe Pending Rebuild
### Removed
- EnderIO Chassies pending Rebuild
